# labs

./: .gitignore  README.md  lab2_1.ipynb
lab2/: README.md  lab2_1.ipynb  lab2_2.ipynb  requirements.txt
lab3/: README.md  lab3.ipynb  requirements.txt
lab4/: README.md  lab4.py  requirements.txt
lab5/: README.md  lab5.py
lab6/: README.md
lab6/Lab6_OpenCV/: CMakeLists.txt  build.sh  preinstall.sh  run.sh
lab6/Lab6_OpenCV/include/: CameraProvider.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab6/Lab6_OpenCV/src/: CameraProvider.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
lab7/: README.md
lab7/Lab7_OpenCV/: CMakeLists.txt  build.sh  preinstall.sh  run.sh
lab7/Lab7_OpenCV/include/: Display.hpp  FaceDetector.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab7/Lab7_OpenCV/src/: Display.cpp  FaceDetector.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
